# subject_store

./: .gitreview  .testr.conf  README.md  README.rst  run_tests.sh  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/drivers/: index.rst
etc/: rootwrap.conf
etc/rootwrap.d/: subject_cinder_store.filters
releasenotes/notes/: improved-configuration-options-3635b56aba3072c9.yaml  prevent-unauthorized-errors-ebb9cf2236595cd0.yaml  releasenote-0.17.0-efee3f557ea2096a.yaml  remove-gridfs-driver-09286e27613b4353.yaml  remove-s3-driver-f432afa1f53ecdf8.yaml  set-documented-default-directory-for-filesystem-9b417a29416d3a94.yaml  sorted-drivers-for-configs-a905f07d3bf9c973.yaml  support-cinder-upload-c85849d9c88bbd7e.yaml
releasenotes/source/: conf.py
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
subject_store/: backend.py  capabilities.py  driver.py  exceptions.py  i18n.py  location.py
subject_store/_drivers/: cinder.py  filesystem.py  http.py  rbd.py  sheepdog.py  vmware_datastore.py
subject_store/_drivers/swift/: __init__.py  connection_manager.py  store.py  utils.py
subject_store/common/: utils.py
subject_store/locale/en_GB/LC_MESSAGES/: glance_store-log-warning.po  glance_store.po
subject_store/locale/es/LC_MESSAGES/: glance_store-log-warning.po
subject_store/locale/fr/LC_MESSAGES/: glance_store-log-warning.po
subject_store/tests/: base.py  fakes.py  utils.py
subject_store/tests/functional/: base.py
subject_store/tests/functional/filesystem/: test_functional_filesystem.py
subject_store/tests/functional/hooks/: gate_hook.sh  post_test_hook.sh
subject_store/tests/functional/swift/: test_functional_swift.py
subject_store/tests/unit/: test_backend.py  test_cinder_store.py  test_connection_manager.py  test_exceptions.py  test_filesystem_store.py  test_http_store.py  test_opts.py  test_rbd_store.py  test_sheepdog_store.py  test_store_base.py  test_store_capabilities.py  test_swift_store.py  test_swift_store_utils.py  test_vmware_store.py
tools/: install_venv.py  tox_install.sh
