[metadata]
name = subject_store
version = 0.1.0
summary = OpenStack Subject Service Store Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/subject_store
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    subject_store

[entry_points]
subject_store.drivers =
    file = subject_store._drivers.filesystem:Store
    http = subject_store._drivers.http:Store
    swift = subject_store._drivers.swift:Store
    rbd = subject_store._drivers.rbd:Store
    sheepdog = subject_store._drivers.sheepdog:Store
    cinder = subject_store._drivers.cinder:Store
    vmware = subject_store._drivers.vmware_datastore:Store

    # TESTS ONLY
    no_conf = subject_store.tests.fakes:UnconfigurableStore

    # Backwards compatibility
    subject.store.filesystem.Store = subject_store._drivers.filesystem:Store
    subject.store.http.Store = subject_store._drivers.http:Store
    subject.store.swift.Store = subject_store._drivers.swift:Store
    subject.store.rbd.Store = subject_store._drivers.rbd:Store
    subject.store.sheepdog.Store = subject_store._drivers.sheepdog:Store
    subject.store.cinder.Store = subject_store._drivers.cinder:Store
    subject.store.vmware_datastore.Store = subject_store._drivers.vmware_datastore:Store

oslo.config.opts =
    subject.store = subject_store.backend:_list_opts

console_scripts =
    subject-rootwrap = oslo_rootwrap.cmd:main

[extras]
# Dependencies for each of the optional stores
vmware =
  oslo.vmware>=2.11.0 # Apache-2.0
swift =
  httplib2>=0.7.5 # MIT
  python-swiftclient>=2.2.0 # Apache-2.0
cinder =
  python-cinderclient!=1.7.0,!=1.7.1,>=1.6.0 # Apache-2.0
  os-brick>=1.6.1 # Apache-2.0
  oslo.rootwrap>=5.0.0 # Apache-2.0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
autodoc_tree_index_modules = True
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = subject_store/locale
domain = subject_store

[update_catalog]
domain = subject_store
output_dir = subject_store/locale
input_file = subject_store/locale/subject_store.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = subject_store/locale/subject_store.pot

[wheel]
universal = 1
